Fixes #52, fixes #60, fixes #64
#52, #60 - done by using DataGrid instead of multiple grids with shared size groups
#64 - info is still in the window title but now it is reduced to fit the window width

--- a/Registry/View/ScheduleEditorRoomDayView.xaml
+++ b/Registry/View/ScheduleEditorRoomDayView.xaml
@@ -9,7 +9,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition MinHeight="75" SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}'}" />
             </Grid.RowDefinitions>
-            <Button Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" Width="250" HorizontalContentAlignment="Stretch">
+            <Button Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" HorizontalContentAlignment="Stretch">
                 <StackPanel Orientation="Vertical">
                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ScheduleItems}">
