--- a/Registry/View/ScheduleEditorRoomDayView.xaml
+++ b/Registry/View/ScheduleEditorRoomDayView.xaml
@@ -1,14 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:registry="clr-namespace:Registry">
+                    xmlns:registry="clr-namespace:Registry"
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
     <DataTemplate DataType="{x:Type registry:ScheduleEditorRoomDayViewModel}">
         <DataTemplate.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <core:UniversalConverter x:Key="StateToBackgroundConverter" DefaultValue="{x:Static Brushes.Transparent}">
+                <core:ConverterItem From="{x:Static registry:RoomDayState.ChangedDirectly}" To="{x:Static Brushes.Yellow}" />
+                <core:ConverterItem From="{x:Static registry:RoomDayState.ChangedIndirectly}" To="{x:Static Brushes.Orange}" />
+            </core:UniversalConverter>
         </DataTemplate.Resources>
-        <Grid x:Name="grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White">
-            <Grid.RowDefinitions>
-                <RowDefinition MinHeight="75" SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}'}" />
-            </Grid.RowDefinitions>
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White">
             <Button Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" HorizontalContentAlignment="Stretch">
                 <StackPanel Orientation="Vertical">
                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -48,6 +50,8 @@
                     <TextBlock Text="Только на этот день" Visibility="{Binding IsThisDayOnly, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5 5 0 0" HorizontalAlignment="Right" Foreground="DimGray" FontStyle="Italic" FontSize="10" />
                 </StackPanel>
             </Button>
+            <Border IsHitTestVisible="False" Opacity="0.3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                    Background="{Binding State, Converter={StaticResource StateToBackgroundConverter}}"/>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
