--- a/Commission/View/Working/CommissionDecisionControl.xaml
+++ b/Commission/View/Working/CommissionDecisionControl.xaml
@@ -7,17 +7,17 @@
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:core="clr-namespace:Core;assembly=StuffLib"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="500" >
+             d:DesignHeight="400" d:DesignWidth="500" >
     
     <UserControl.Resources>
         <system:Boolean x:Key="True">True</system:Boolean>
         <system:Boolean x:Key="False">False</system:Boolean>
         <core:UniversalConverter x:Key="UserHasDecisionConverter">
             <core:ConverterItem From="{StaticResource True}">
-                <core:ConverterItem.To>pack://application:,,,/Resources;component/Images/SwitchOn_32x32.png</core:ConverterItem.To>
+                <core:ConverterItem.To>pack://application:,,,/Resources;component/Images/Accepted_32x32.png</core:ConverterItem.To>
             </core:ConverterItem>
             <core:ConverterItem From="{StaticResource False}">
-                <core:ConverterItem.To>pack://application:,,,/Resources;component/Images/SwitchOff_32x32.png</core:ConverterItem.To>
+                <core:ConverterItem.To>pack://application:,,,/Resources;component/Images/Edited_32x32.png</core:ConverterItem.To>
             </core:ConverterItem>
         </core:UniversalConverter>
     </UserControl.Resources>
@@ -33,24 +33,28 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
-        <Label Grid.Row="0" Grid.Column="0" Content="{Binding CommissionName}"/>
-        <Label Grid.Row="0" Grid.Column="1" Content="{Binding Talon}"/>
 
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Vertical">
+            <Label Content="{Binding CommissionName}" FontWeight="Bold" FontSize="15"/>
+            <Label Content="{Binding Talon}"/>
+        </StackPanel>
+        
         <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Content="Решения членов комиссии" FontWeight="Bold"/>
-        <ListView x:Name="decisions" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding CommissionDecisions}" SelectedItem="{Binding SelectedCommissionDecision, Mode=TwoWay}" Margin="5">
+        <ListView x:Name="decisions" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" ItemsSource="{Binding CommissionDecisions}" Margin="5">
             <ListView.View>
                 <GridView>                    
                     <GridViewColumn>
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="{Binding Path=HasDecision, Converter={StaticResource UserHasDecisionConverter}}" Margin="5,0,0,5" Stretch="None" Height="24"/>
+                                    <Image Source="{Binding Path=HasDecision, Converter={StaticResource UserHasDecisionConverter}}" Margin="5,0,0,5" Stretch="None" Height="32"/>
                                     <StackPanel Orientation="Vertical" Margin="5,0">
                                         <StackPanel Orientation="Horizontal">
                                             <TextBlock Text="{Binding StageText}"></TextBlock>
@@ -72,10 +76,12 @@
             </ListView.View>
         </ListView>
 
-        <Label Grid.Row="3" Grid.Column="0" Content="Запрос участников"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="Предварительный запрос участников"/>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Margin="5">
-            <Button Content="Добавить"></Button>
-            <Label Content="--запрашиваемые члены--"></Label>
+            <Button Content="Добавить участников" 
+                    Command="{Binding SelectMembersToPreviousStageCommand}"
+                    IsEnabled="{Binding AllowSave}"></Button>
+            <Label Content="{Binding PreviousMembers}"></Label>
         </StackPanel>
         
         <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Ваше решение по комиссии" FontWeight="Bold"/>
@@ -88,11 +94,28 @@
 
         <Label Grid.Row="7" Grid.Column="0" Margin="5" Content="Рекоммендации (ваш комментарий к решению)"/>
         <TextBox Grid.Row="7" Grid.Column="1" Height="50" Margin="5" Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}"></TextBox>
-
-        <Button Grid.Row="8" Grid.Column="2" Margin="5" 
+       
+        <Button Grid.Row="8" Grid.Column="1" Margin="5" IsEnabled="{Binding AllowSave}"
                 Command="{Binding SaveDecisionCommand}"
                 CommandParameter="{Binding ElementName=decisions, Path=SelectedItem}"
                 Content="Сохранить (принять) решение" HorizontalAlignment="Left">
         </Button>
+
+        <Border Grid.Row="9" Grid.ColumnSpan="2" BorderBrush="Gray" BorderThickness="1,0,1,1" Margin="0,10">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#33000000" Offset="0" />
+                    <GradientStop Color="#11000000" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        
+        <Label Grid.Row="10" Grid.Column="0" Content="Последующий запрос участников"/>
+        <StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal" Margin="5">
+            <Button Content="Добавить участников" 
+                    Command="{Binding SelectMembersToNextStageCommand}" 
+                    IsEnabled="{Binding AllowSave}"></Button>
+            <Label Content="{Binding NextMembers}"></Label>
+        </StackPanel>
     </Grid>
 </UserControl>
