--- a/Registry/View/ScheduleEditorRoomDayView.xaml
+++ b/Registry/View/ScheduleEditorRoomDayView.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <DataTemplate DataType="{x:Type registry:ScheduleEditorRoomDayViewModel}">
         <DataTemplate.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -12,6 +13,26 @@
         </DataTemplate.Resources>
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White">
             <Button Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" HorizontalContentAlignment="Stretch">
+                <Button.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Command="{Binding CloseCommand, Mode=OneTime}" CommandParameter="{core:Convert True, {x:Type system:Boolean}}">
+                            <MenuItem.Header>
+                                <TextBlock>
+                                    <Run Text="Закрыть только" />
+                                    <Run Text="{Binding RelatedDate, StringFormat=dd.MM.yyyy, Mode=OneWay}" />
+                                </TextBlock>
+                            </MenuItem.Header>
+                        </MenuItem>
+                        <MenuItem Command="{Binding CloseCommand, Mode=OneTime}" CommandParameter="{core:Convert False, {x:Type system:Boolean}}">
+                            <MenuItem.Header>
+                                <TextBlock>
+                                    <Run Text="Закрыть, начиная с" />
+                                    <Run Text="{Binding RelatedDate, StringFormat=dd.MM.yyyy, Mode=OneWay}" />
+                                </TextBlock>
+                            </MenuItem.Header>
+                        </MenuItem>
+                    </ContextMenu>
+                </Button.ContextMenu>
                 <StackPanel Orientation="Vertical">
                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ScheduleItems}">
